src/css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");

* {
  box-sizing: border-box;
}

body {
  width: 100vw;
  height: 100vh;

  overflow-x: hidden;

  font-family: "Poppins", sans-serif;
  font-size: 1.3rem;
  font-weight: 400;

  background-color: #f3f3f3;
}

body,
main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

a {
  color: black;
  font-weight: 500;
}

header {
  width: 100%;
  min-height: 4rem;
  padding: 0 3%;

  display: flex;
  align-items: center;
  justify-content: center;

  position: fixed;
  top: 0;
  z-index: 1;

  box-shadow: 0rem 0.125rem 0.25rem 0.125rem rgba(0, 0, 0, 0.2);

  background-color: #f7f7f7;
}

.header-container {
    width: 100%;
    max-width: 75rem;

    display: flex;
    justify-content: space-between;
}

.header-title{
    font-size: 1.7rem;
    font-weight: 600;
}

.contact {
  display: flex;
  flex-direction: row;
  gap: 2rem;
}

main {
  max-width: 75rem;
  margin: 8rem 1rem 2rem 1rem;
}

.description {
  width: 100%;
  padding: 2rem;
  text-align: center;
}

.description,
.project-box {
  background-color: #f7f7f7;
  border: 0.125rem solid #808080;
  border-radius: 0.8rem;
  box-shadow: 0rem 0.125rem 0.25rem 0.125rem rgba(0, 0, 0, 0.2);
}

.projects {
  width: 100%;
  height: 100%;
  margin-top: 5rem;

  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  gap: 2rem 1rem;
}

.project-box {
  min-width: 250px;
  max-width: 380px;
  height: 400px;
  padding: 1rem;
}

.project-box:hover {
  transform: scale(1.05);
  box-shadow: 0rem 0.125rem 1rem 0.125rem rgba(0, 0, 0, 0.4);
}

.project {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

.project-img {
  width: 100%;
  height: 250px;
  background: url(../assets/images/1-dk-desktop.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-radius: 0.5rem;
}

.project-title {
  font-size: 1.55rem;
  font-weight: 600;
}

.project-description {
  max-height: 82px;
  display: -webkit-box;
  font-weight: 300;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.footer {
  margin-bottom: 0.5rem;

  position: absolute;
  bottom: 0;

  font-size: 1.1rem;
}

